examples/test/testpolicy5552.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5552
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key11: value28
      key37: value23
      key25: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value44
          key44: value20
      podSelector:
        matchLabels:
          key30: value18
          key26: value31
